# aio-overpass

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md  pyproject.toml  tasks.py
.github/codeql/: codeql-config.yml
.github/workflows/: checks.yml  ci.yml  codeql.yml  compat_tests.yml  doc.yml  integration_test.yml  integration_tests.yml  manual_publish.yml  manual_publish_docs.yml  publish.yml  push_compat_test.yml  push_lint.yml  push_tag_publish.yml  push_test.yml  sched_codeql.yml  sched_integration_test.yml  sched_test_deps_matrix.yml  test_and_publish.yml  test_deps_matrix.yml  test_scripts.yml  unit_tests.yml
aio_overpass/: __init__.py  _clock.py  _dist.py  _env.py  _ql.py  client.py  element.py  error.py  pt.py  pt_ordered.py  ql.py  query.py  spatial.py
aio_overpass/doc/: coordinates.md  extras.md  usage.md
examples/: README.md  poly_clause.ipynb  pt_ordered.ipynb  pt_ordered_hamburg_u3.ipynb
test/: README.md  test_already_running.py  test_cancel_queries.py  test_cooldown.py  test_default_query_runner.py  test_element.py  test_error.py  test_interpreter_error.py  test_large_data.py  test_names.py  test_out_variations.py  test_pt_ordered.py  test_ql.py  test_readme.py  test_status.py  test_value_errors.py  util.py
test/element_data/: invalid_building_geometry.json
test/integration/: __init__.py  _element.py  _route.py  any_element_barmbek_nord.py  any_element_carabanchel.py  any_element_city_of_london.py  any_route_barmbek_nord.py  any_route_carabanchel.py  any_route_city_of_london.py
test/out_variations/: way_out.json  way_out_bb.json  way_out_body.json  way_out_center.json  way_out_geom.json  way_out_geom_meta.json  way_out_ids.json  way_out_meta.json  way_out_noids.json  way_out_skel.json  way_out_tags.json
test/route_data/: ambiguous_stop_name1.json  ambiguous_stop_name2.json  bus_mapping1.json  bus_mapping2.json  bus_mapping_mixed.json  gap.json  highway_bus_stop_position.json  no_roles.json  no_stops.json  platform_mismatch.json  platform_relations.json  recycling_bad.json  recycling_good.json  role_mismatch.json  same_stop_no_roles.json  segmented.json  simple_linestring.json  stop_on_roundabout.json  stops_in_same_stop_area.json  unnamed_platforms.json  with_master.json
test/scripts/: any_route_barmbek_nord.py  any_route_carabanchel.py
test_scripts/: any_element_barmbek_nord.py  any_element_carabanchel.py  any_route_barmbek_nord.py  any_route_carabanchel.py
