[tool.poetry]
name = "aio-overpass"
version = "0.12.1"
description = "Async client for the Overpass API"
authors = ["Tim Wiechers <mail@timwie.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timwie/aio-overpass"
documentation = "https://www.timwie.dev/aio-overpass/"
packages = [{ include = "aio_overpass" }]
include = ["CHANGELOG.md"]
keywords = [
    "geojson",
    "geospatial",
    "gis",
    "openstreetmap",
    "osm",
    "overpass-api",
    "public-transport",
    "spatial-analysis",
    "spatial-data",
    "shapely",
]
classifiers = [
    # TODO "Development Status :: 4 - Beta"
    #   - complete test suites
    #   - usability testing
    #   - check for performance issues

    # TODO "Development Status :: 5 - Production/Stable"
    #   - release 1.0
    #   - field-tested
    #   - no major bugs

    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: aiohttp",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/timwie/aio-overpass/blob/main/CHANGELOG.md"
"Coverage" = "https://codecov.io/gh/timwie/aio-overpass"

[tool.poetry.dependencies]
aiohttp = { version = "~3.9", extras = ["speedups"] }
joblib = { version = "~1.3", optional = true }
networkx = { version = "^3", optional = true }
numpy = [
    { version = "^1.23", optional = true, python = ">=3.10,<3.12" },
    { version = "^1.26", optional = true, python = ">=3.12,<3.13" },
]
python = "^3.10"
shapely = { version = "~2.0", optional = true }

[tool.poetry.extras]
joblib = ["joblib"]
networkx = ["networkx"]
shapely = ["numpy", "shapely"]

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
codecov = "^2.1.13"
geojson = "^3.1.0"
invoke = "^2.2.0"
isort = "^5.13.2"
loguru = "^0.7.2"
mypy = "^1.8.0"
pdoc = "^14.4.0"
pyright = "^1.1.348"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
ruff = "^0.1.3"
slotscheck = "^0.17.0"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
folium = "^0.15.1"
jupyterlab = "^4.0.12"
# TODO papermill depends on aiohttp==3.9.0b for some reason
#   https://github.com/nteract/papermill/pull/760
# papermill = "^2.5.0"
randomcolor = "^0.4.4.6"
selenium = "^4.17.2"
tabulate = "^0.9.0"

[tool.ruff]
# https://docs.astral.sh/ruff/settings/
# https://docs.astral.sh/ruff/rules/
line-length = 100
target-version = "py310"
select = [
    "F", "E", "W", "N", "D", "UP",
    "ANN", "S", "B", "C4", "EM", "SIM", "ARG",
    "PL", "TRY", "PERF", "RUF"
]
ignore = [
    "S101",
    "D105", "D107", "D203", "D212",
    "ANN003", "ANN101", "ANN102", "ANN401",
    "C408",
    "PLR2004", "PLW2901",
    "TRY003",
    "UP015",
]

[tool.ruff.lint.pylint]
max-args = 4

[tool.ruff.pydocstyle]
convention = "google"

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
profile = "black"
line_length=100
indent='    '
multi_line_output=6
lines_after_imports=2
known_first_party="aio_overpass,test"
sections="STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
ignore_missing_imports = true

[tool.pyright]
# https://microsoft.github.io/pyright/#/configuration
pythonVersion = "3.10"
verboseOutput = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
