[project]
name = "aio-overpass"
version = "0.15.0"
description = "Async client for the Overpass API"
authors = [{ name = "Tim Wiechers", email = "mail@timwie.dev" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = [
    "geojson",
    "geospatial",
    "gis",
    "openstreetmap",
    "osm",
    "overpass-api",
    "public-transport",
    "spatial-analysis",
    "spatial-data",
    "shapely",
]
classifiers = [
    # TODO "Development Status :: 4 - Beta"
    #   - complete test suites
    #   - usability testing
    #   - check for performance issues

    # TODO "Development Status :: 5 - Production/Stable"
    #   - release 1.0
    #   - field-tested
    #   - no major bugs

    "Development Status :: 3 - Alpha",
    "Framework :: aiohttp",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp[speedups]>=3.9",
]

[project.optional-dependencies]
joblib = ["joblib>=1.3"]
networkx = ["networkx>=3"]
shapely = ["numpy>=2.1", "shapely>=2"]

[project.urls]
repository = "https://github.com/timwie/aio-overpass"
documentation = "https://www.timwie.dev/aio-overpass/"
"Release Notes" = "https://github.com/timwie/aio-overpass/blob/main/RELEASES.md"
"Test Coverage" = "https://codecov.io/gh/timwie/aio-overpass"

[dependency-groups]
dev = [
    "aioresponses>=0.7.6",
    "codecov>=2.1.13",
    "geojson>=3.2.0",
    "invoke>=2.2.0",
    "isort>=6.0.0",
    "mypy>=1.14.1",
    "pdoc>=15.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.0",
    "slotscheck>=0.19.0",
]
notebooks = [
    "folium>=0.19.0",
    "jupyterlab>=4.3.4",
    "papermill>=2.6.0",
    "randomcolor>=0.4.4.6",
    "selenium>=4.27.1",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aio_overpass"]

[tool.ruff]
# https://docs.astral.sh/ruff/settings/
# https://docs.astral.sh/ruff/rules/
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ASYNC109", "COM812", "D105", "D107", "D203", "D212", "FIX", "G004", "I", "ISC001", "PLR2004", "RUF022",
    "S101", "SLF001", "TD",
]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ANN", "ASYNC230", "C901", "D", "E501", "F401", "F811", "PLR0915"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["__doc__"]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
profile = "black"
line_length = 100
indent = '    '
multi_line_output = 6
lines_after_imports = 2
known_first_party = "aio_overpass,test"
sections = "STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
ignore_missing_imports = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"  # function, class, module, package, session
asyncio_default_test_loop_scope = "function"
